modify the demo html file

--- a/recipes/demo.html
+++ b/recipes/demo.html
@@ -3,9 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>demo</title>
 </head>
 <body>
+    <h1>Demo</h1>
+    <img src="../images/Blank_square.svg.png" alt="image of demo" width="640" height="640">
+    <h2>Description</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse repellat quisquam provident nam</p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>Lorem.</li>
+        <li>Lorem, ipsum.</li>
+        <li>Lorem, ipsum.</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol type="1">
+    <li>Lorem ipsum dolor sit.</li>
+    <li>Lorem ipsum dolor sit amet.</li>
+    <li>Lorem ipsum dolor sit amet consectetur.</li>
+    <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</li>
+    </ol>
     
 </body>
 </html>
