--- a/recipes/demo.html
+++ b/recipes/demo.html
@@ -23,6 +23,7 @@
     <li>Lorem ipsum dolor sit amet consectetur.</li>
     <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</li>
     </ol>
+    <a href="../index.html">Home</a>
     
 </body>
 </html>
