add all modifications done

--- a/recipes/vada-pav.html
+++ b/recipes/vada-pav.html
@@ -19,7 +19,7 @@
         <li> spices</li>
         <li> chutney</li>
       </ul>
-      <h2>Steps></h2>
+      <h2>Steps</h2>
       <ol type="1">
         <li>Sauté mustard, cumin, ginger, garlic, green chilies, and curry leaves in hot oil.</li>
         <li>Add turmeric and mashed potatoes, mix well with salt, and cook for a minute.</li>
