--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     <h1>odin recipes</h1>
-    <a href="./recipes/vada_pav.html"> vada pav</a>
+    <ul>
+   <li><a href="./recipes/vada-pav.html"> vada pav</a></li>
+    <li><a href="./recipes/demo.html">demo</a></li>
+    </ul>
 </body>
 </html>
